# File-uploader

./: .gitignore  CHANGELOG.md  COMMANDS_SHEET.md  Dockerfile.example  GITHUB_RELEASE_SETUP.md  LAMBDA_WORKFLOW_DEMO.md  README.md  aws-assistant  aws-assistant.cmd  aws_assistant.py  chart.py  container_assistant.py  deployment.md  ec2_profiles.example.json  ecs_task_definition.example.json  eonforge_revenue_ebitda.png.meta.json  instructions.md  k8s_deployment.example.yaml  lambda_assistant.py  lambda_config.example.json  lambda_handler.py  pyproject.toml  requirements.txt  run.ps1  uploader.py  validate_aws_credentials.py
.github/workflows/: ci.yml  publish-container.yml  publish-python.yml
aws_assistant_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lambda_demo/: handler.py
setup/: get_aws_info.py  setup_lambda_role.py  update_handler.py
tests/: test_aws_assistant_ec2.py  test_aws_assistant_qol.py  test_container_assistant.py  test_lambda.py  test_lambda_assistant.py
tmp_sync_test/: hello.txt
