[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-assistant-toolkit"
version = "2.0.0"
description = "Lightweight, beginner-friendly AWS assistant CLI with safer workflows than raw AWS CLI."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Rajnish Goyal" }
]
keywords = ["aws", "cli", "devops", "cloud", "boto3", "assistant"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities"
]
dependencies = [
  "boto3>=1.34.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0"
]

[project.optional-dependencies]
tui = [
  "questionary>=2.0.1"
]
dev = [
  "pytest>=8.0.0",
  "build>=1.2.1",
  "twine>=5.1.1"
]

[project.scripts]
aws-assistant = "aws_assistant:main"
aws-assistant-lambda = "lambda_assistant:main"
aws-assistant-container = "container_assistant:main"
aws-assistant-s3 = "uploader:main"

[tool.setuptools]
py-modules = [
  "aws_assistant",
  "uploader",
  "lambda_assistant",
  "container_assistant",
  "lambda_handler",
  "validate_aws_credentials",
  "chart"
]
